logs/mobility/build.make.068.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doFreeMovementStuff()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:829:5: error: ‘headedBackToBase’ was not declared in this scope
 if (headedBackToBase == false)
     ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
